--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -3,10 +3,9 @@
     flex-direction: column;
     min-width: 250px;
     margin-right: 30px;
-    overflow: scroll;
-    height: 870px;
-    top: 60px;
-    bottom: 0;
+    overflow-y: scroll;
+    height: 89vh;
+    top: 70px;
     position: sticky;
 }
 
