--- a/src/components/Videos/videos.module.css
+++ b/src/components/Videos/videos.module.css
@@ -110,5 +110,7 @@
 }
 
 .videos{
+    overflow-y: scroll;
     background-color: #f9f9f9;
+    height: 80vh;
 }
